# linkedin-scrapper-resume

./: .env  .env.example  .firebaserc  .gitignore  ANALYSIS_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_VISUAL.md  CODE_OF_CONDUCT.md  COMPLETE_OAUTH2_SUMMARY.md  CONTRIBUTING.md  DATABASE_FIX.md  DATA_ANALYSIS_GUIDE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FIREBASE_TROUBLESHOOTING.md  FIX_APPLIED.md  FIX_APPLIED_HF_DATABASE.md  FIX_JSON_SERIALIZATION.md  FIX_STATS_GENERATOR.md  GEMINI_API_GUIDE.md  GITHUB_CHECKLIST.md  HF_DEPLOY_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_GUIDE.md  PRODUCTION_READY_SUMMARY.md  PUBLIC_DEPLOYMENT_GUIDE.md  README.md  READY_FOR_GITHUB.md  RELEASE_NOTES.md  REMOVED_SQLITE.md  SECURITY_ENHANCEMENTS.md  SETUP_VERIFICATION_SUMMARY.md  SUMMARY.md  SUPABASE_SDK_MIGRATION.md  URGENT_FIX.md  api.py  check_models.py  cloudbuild.yaml  cv.md  (+16 more)
.agent/workflows/: deploy-to-gcp.md
.firebase/: hosting.c3RhdGlj.cache  hosting.cHVibGlj.cache
backend/: Dockerfile  README.md  api.py  batch_generate_cvs.py  main.py  pyproject.toml  verify_setup.py
backend/src/: cookies_manager.py  database.py  firebase_auth.py  llm_generator.py  pdf_converter.py  stats_generator.py
data/: cookies.json  jobs.db  last_scrape.json  tailored_cv_1.md  tailored_cv_2.md  tailored_cv_test.md
docs/: CONFIGURATION_REFERENCE.md  FIREBASE_SETUP.md  HUGGINGFACE_DEPLOYMENT.md  QUICK_SETUP.md  QUICK_START.md  SUPABASE_SETUP.md
frontend/: README.md  firebase.json
frontend-nuxt/: nuxt.config.ts  package-lock.json  package.json
frontend-nuxt/app/assets/css/: main.css
frontend-nuxt/components/: AuthModal.vue  CvGenerator.vue  JobScraper.vue  StatsDashboard.vue
frontend-nuxt/composables/: useApi.ts  useTabNavigation.ts  useValidation.ts
frontend-nuxt/layouts/: default.vue
frontend-nuxt/middleware/: auth.ts
frontend-nuxt/pages/: index.vue
frontend-nuxt/plugins/: firebase.client.ts
frontend-nuxt/stores/: auth.ts
frontend/.firebase/: hosting.c3RhdGlj.cache
frontend/static/: app.js  config.js  index.html
legacy_gcp/: PRODUCTION_GUIDE.md  deploy.sh
src/: auth.py  database.py  encryption.py  firebase_auth.py  linkedin_auth.py  llm_generator.py  scraper.py  stats_generator.py
static/: app.js  config.js  index.html  test-firebase.html
