[project]
name = "linkedin-scraper-resume"
version = "1.0.0"
description = "Automated LinkedIn job scraper with AI-powered CV tailoring using Google Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "markdown>=3.10",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.11",
    "weasyprint>=66.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/linkedin-scraper-resume"
Repository = "https://github.com/YOUR_USERNAME/linkedin-scraper-resume.git"
Issues = "https://github.com/YOUR_USERNAME/linkedin-scraper-resume/issues"
